Add security config for limiting the Concurrent sessions to 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.datasource.url=jdbc:ucanaccess://accountsdb.accdb;openExclusive=false;ignoreCase=true
 spring.datasource.driver-class-name=net.ucanaccess.jdbc.UcanaccessDriver
 
-server.servlet.session.timeout=1m
+server.servlet.session.timeout=60
